--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+.immagine{
+  background-image: url("https://images.unsplash.com/photo-1513013156887-d2bf241c8c82?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTcwfHxjYW5lJTIwaGQlMjBvcnJpenpvbnRhbGV8ZW58MHx8MHx8fDA%3D");
+  background-size: 120% 100%; 
+  background-repeat: no-repeat;
+  background-position: center;
+  
+}
+
 .App {
   text-align: center;
+  background-color: rgb(181, 193, 93);
 }
 
 .App-logo {
