--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .logo{width: 3%;
 margin-right: 1%;
 }
+/* Sezione settaggio card */
+.custom-card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.custom-card-title {
+  margin-bottom: 0.5rem;
+}
+
+.custom-card-text {
+  flex: 1;
+}
 
 .App {
   text-align: center;
