--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,16 @@ margin-right: 1%;
 }
 
 .custom-card-text {
-  flex: 1;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.custom-card {
+  width: 12rem;
+  height: 20rem; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
 }
 
 .App {
