--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@ margin-right: 1%;
 }
 /* Sezione settaggio card */
 .custom-card-body {
+  width: auto;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -17,9 +19,10 @@ margin-right: 1%;
   font-weight: bold;
 }
 .custom-card {
-  width: 12rem;
-  height: 20rem; 
+  width: auto;
+  height: auto; 
   display: flex;
+  margin: 10px;
   flex-direction: column;
   justify-content: space-between;
   text-align: center;
