Aggiunta metodo pagamento nel dettaglio ordine ed aggiunta pagina singolo prodotto

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,15 @@ margin-right: 1%;
   font-weight: normal; /* Rimuovere il grassetto */
 }
 
+.prodotto-image{
+height: 80%;
+}
 
+
+.text-custom{
+
+margin-top:10%;
+}
 
 
 .App {
