--- a/src/App.css
+++ b/src/App.css
@@ -3,38 +3,25 @@ margin-right: 1%;
 }
 /* Sezione settaggio card */
 .custom-card {
-  width: auto;
-  height: 300px; /* Altezza fissa per tutte le card */
+  width: auto; 
   display: flex;
   margin: 10px;
   flex-direction: column;
   justify-content: space-between;
   text-align: center;
-  overflow: hidden; /* Per evitare che l'immagine esca dalla card */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+ 
 }
 
-.custom-card-body {
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Centrare il testo */
-}
 
-.custom-card-title {
-  margin-bottom: 0.5rem;
-  font-size: 1.2rem; /* Regolare la dimensione del titolo */
-  font-weight: bold;
-}
 
-.custom-card-text {
-  font-size: 1rem; /* Regolare la dimensione del testo */
-  font-weight: normal; /* Rimuovere il grassetto */
-}
+
 
 .prodotto-image{
 height: 80%;
 }
-
 
 .text-custom{
 
